2006-07-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_table.C: New "Emerging" column.
	* action_harvest.C: Added "emerge" action.
	* field.h, field.C (emerge): New operation.
	* column.h, column_std.C (emerge): Ditto.
	* vegetation.h, vegetation_permanent.C
	* vegetation_crops.C (emerge): Ditto.
	* crop_sold.C, crop_old.C, crop_std.C, crop_simple.C:
	* crop.h (emerge): Ditto.

2006-07-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.06 released.

2006-07-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* sample/log-sample.dai ("Sample water content"): Fixed spec.

	* parser_file.C (load_list): Handle fixed size object sequences.
	(load_list): Handle sequence valued variables.

2006-07-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (load_derived): Handle '$' variables.

2006-07-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log.dai, lib/log-std.dai: Cleaned up specs.

	* Version 4.05 released.

2006-07-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry.C (initialize_layer): Don't assume array is large
	enough to hold all cells.

2006-06-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.04 released.

2006-06-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_file.C, source_file.h (default_hour): New parameter.

2006-06-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* select.C (check_path): Complain if fixed components are found in
	the spec.

	* lib/log-std.dai ("Field nitrogen"): Simplify 'spec' entries.

	* Version 4.03 released.

2006-06-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_std.C (load): Bug fix.  Stored values in wrong time steps.

2006-05-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry_vert.h, geometry_vert.C: New interface.
	* Makefile (SPECIALS): Add it.
	* geometry_rect.h, geometry_rect.C:
	* geometry1d.h, geometry1d.C: Derive from it.
	* uzmodel.h, uzlr.C, uznone.C, uzrichard.C: Use it.
	
2006-05-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* bioclimate_std.C (WaterDistribution): Handle pond/snow